--- a/BookOnline/Views/Shared/_Layout.cshtml
+++ b/BookOnline/Views/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
 								</div>
 							</li>
 						}
+
 						@if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
 						{
 							<li class="nav-item dropdown">
@@ -57,6 +58,18 @@
 								</div>
 							</li>
 						}
+						<li class="nav-item">
+							<a class="nav-link" asp-area="Admin" asp-controller="Order" asp-action="Index">
+								@if (User.IsInRole(SD.Role_Employee) || User.IsInRole(SD.Role_Admin))
+								{
+									<span>Manage Order</span>
+								}
+								else
+								{
+									<span>Order History</span>
+								}
+							</a>
+						</li>
 						@if (HttpContextAccessor.HttpContext.Session.GetInt32(SD.ssShoppingCart) != null)
 						{
 							<li style="color:white;">
@@ -76,6 +89,8 @@
 								</a>
 							</li>
 						}
+
+
 					</ul>
 				</div>
 			</div>
